--- a/cmd/client/tmpl/server/router.tmpl
+++ b/cmd/client/tmpl/server/router.tmpl
@@ -12,11 +12,12 @@ import (
 
 func RegisterHTTPServer(engine *gin.Engine, srv *service.Service) {
 	cache, _ := app.NewUtil().Cache()
+
 	xxxGroup := engine.Group("/activity/xxx/").Use(http.BaseHandle(cache), http.LimitHandle(cache))
 	{
 		xxxGroup.POST("xxx", func(c *gin.Context) {
 			//var request {{.Server}}.LoginRequest
-			//http.NewGateway().JSON(c, &request, func() (interface{}, error) {
+			//http.SSE().Run(c, &request, func() (interface{}, error) {
 			//	return srv.Login(c.Request.Context(), &request)
 			//})
 		})
