--- a/cmd/client/tmpl/server/router.tmpl
+++ b/cmd/client/tmpl/server/router.tmpl
@@ -1,14 +1,18 @@
 package router
 
 import (
+    "context"
 	"github.com/gin-gonic/gin"
 	"{{.Page}}/activity/internal/service"
 	"github.com/long250038728/web/protoc/{{.Server}}"
 	"github.com/long250038728/web/tool/app"
 	"github.com/long250038728/web/tool/server/http"
+	"github.com/long250038728/web/tool/server/http/gateway"
 	"google.golang.org/grpc"
 	"google.golang.org/grpc/health/grpc_health_v1"
 )
+
+
 
 func RegisterHTTPServer(engine *gin.Engine, srv *service.Service) {
 	cache, _ := app.NewUtil().Cache()
@@ -16,10 +20,9 @@ func RegisterHTTPServer(engine *gin.Engine, srv *service.Service) {
 	xxxGroup := engine.Group("/activity/xxx/").Use(http.BaseHandle(cache), http.LimitHandle(cache))
 	{
 		xxxGroup.POST("xxx", func(c *gin.Context) {
-			//var request {{.Server}}.LoginRequest
-			//http.SSE().Run(c, &request, func() (interface{}, error) {
-			//	return srv.Login(c.Request.Context(), &request)
-			//})
+			//gateway.Json(c, &{{.Server}}.xxx{}).Handle(func(ctx context.Context, req any) (any, error) {
+            //	 return srv.xxx(ctx, req.(*auth_rpc.xxx))
+            //})
 		})
 	}
 }
