--- a/cmd/client/tmpl/server/main.tmpl
+++ b/cmd/client/tmpl/server/main.tmpl
@@ -53,7 +53,10 @@ func Run(serverName string) error {
 
 	//启动服务
 	application, err := app.NewApp(opts...)
-	defer application.Stop()
+	defer func() {
+    	application.Stop()
+    	util.Close()
+    }()
 	if err != nil {
 		return err
 	}
