--- a/cmd/client/tmpl/server/router.tmpl
+++ b/cmd/client/tmpl/server/router.tmpl
@@ -12,11 +12,24 @@ import (
 	"google.golang.org/grpc/health/grpc_health_v1"
 )
 
-func RegisterHTTPServer(engine *gin.Engine, srv *service.Service) {
-	cache, _ := app.NewUtil().Cache()
+type Router struct {
+	util *app.Util
+}
+
+func NewRouter(util *app.Util) *Router {
+	return &Router{
+		util: util,
+	}
+}
+
+func (r *Router) RegisterHTTPServer(engine *gin.Engine, srv *service.Service) {
+	authorized, err := r.util.Auth()
+    if err != nil {
+   		panic(err)
+   	}
 
 	// 服务/领域/接口
-	xxxGroup := engine.Group("/{{.Server}}/xxx/").Use(gateway.BaseHandle(cache))
+	xxxGroup := engine.Group("/{{.Server}}/xxx/").Use(middleware.BaseHandle(authorized))
 	{
 		xxxGroup.GET("xxx", func(c *gin.Context) {
             //gateway.Json(c, &{{.Server}}.xxxRequest{}).Use(
@@ -28,7 +41,7 @@ func RegisterHTTPServer(engine *gin.Engine, srv *service.Service) {
 	}
 }
 
-func RegisterGRPCServer(engine *grpc.Server, srv *service.Service) {
+func (r *Router) RegisterGRPCServer(engine *grpc.Server, srv *service.Service) {
 	{{.Server}}.Register{{serverNameFunc .Server}}Server(engine, srv)
 	grpc_health_v1.RegisterHealthServer(engine, srv)
 }
