--- a/cmd/client/tmpl/server/router.tmpl
+++ b/cmd/client/tmpl/server/router.tmpl
@@ -22,7 +22,7 @@ func NewRouter(util *app.Util) *Router {
 	}
 }
 
-func (r *Router) RegisterHTTPServer(engine *gin.Engine, srv *service.Service) {
+func (r *Router) RegisterHTTPServer(engine *gin.Engine, srv *service.{{serverNameFunc .Server}}Service) {
 	authorized, err := r.util.Auth()
     if err != nil {
    		panic(err)
@@ -41,7 +41,7 @@ func (r *Router) RegisterHTTPServer(engine *gin.Engine, srv *service.Service) {
 	}
 }
 
-func (r *Router) RegisterGRPCServer(engine *grpc.Server, srv *service.Service) {
+func (r *Router) RegisterGRPCServer(engine *grpc.Server, srv *service.{{serverNameFunc .Server}}Service) {
 	{{.Server}}.Register{{serverNameFunc .Server}}Server(engine, srv)
 	grpc_health_v1.RegisterHealthServer(engine, srv)
 }
