--- a/cmd/client/tmpl/server/repository.tmpl
+++ b/cmd/client/tmpl/server/repository.tmpl
@@ -8,6 +8,6 @@ type {{serverNameFunc .Server}}Repository struct {
 	util *app.Util
 }
 
-func New{{serverNameFunc .Server}}Repository(util *app.Util) *Repository {
-	return &Repository{util: util}
+func New{{serverNameFunc .Server}}Repository(util *app.Util) *{{serverNameFunc .Server}}Repository {
+	return &{{serverNameFunc .Server}}Repository{util: util}
 }
