--- a/cmd/gen/client/tmpl/devops/kubernetes.tmpl
+++ b/cmd/gen/client/tmpl/devops/kubernetes.tmpl
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: {{.Server}}-container
-          image: {{.Hub}}/{{.Server}}:{{.Version}}
+          image: {{.Server}}
           ports:
             - containerPort: {{.Http}}
             - containerPort: {{.Grpc}}
