--- a/cmd/gen/client/tmpl/devops/dockerfile.tmpl
+++ b/cmd/gen/client/tmpl/devops/dockerfile.tmpl
@@ -15,5 +15,6 @@ FROM ubuntu:latest
 WORKDIR /opt/app
 COPY --from=builder /app/application/{{.Server}}/cmd/main /opt/app/main
 COPY --from=builder /app/config /opt/app/config
+ENV CONFIG=/app/config
 EXPOSE {{.Http}} {{.Grpc}}
 CMD ["/opt/app/main",">>","log.txt"]
