--- a/cmd/gen/client/tmpl/devops/kubernetes.tmpl
+++ b/cmd/gen/client/tmpl/devops/kubernetes.tmpl
@@ -13,7 +13,7 @@ spec:
         app: {{.Server}}
     spec:
       containers:
-        - name: {{.Server}}-container
+        - name: container
           image: ubuntu:latest
           ports:
             - containerPort: {{.Http}}
