--- a/cmd/gen/client/tmpl/server/handles.tmpl
+++ b/cmd/gen/client/tmpl/server/handles.tmpl
@@ -1,4 +1,4 @@
-package router
+package handles
 
 import (
 	"context"
@@ -12,17 +12,15 @@ import (
 	"google.golang.org/grpc/health/grpc_health_v1"
 )
 
-type Router struct {
+type Handles struct {
 	util *app.Util
 }
 
-func NewRouter(util *app.Util) *Router {
-	return &Router{
-		util: util,
-	}
+func NewHandles(util *app.Util) *Handles {
+	return &Handles{util: util}
 }
 
-func (r *Router) RegisterHTTPServer(engine *gin.Engine, srv *service.{{serverNameFunc .Server}}Service) {
+func (r *Handles) RegisterHTTPServer(engine *gin.Engine, srv *service.{{serverNameFunc .Server}}) {
 	authorized, err := r.util.Auth()
     if err != nil {
    		panic(err)
@@ -41,7 +39,7 @@ func (r *Router) RegisterHTTPServer(engine *gin.Engine, srv *service.{{serverNam
 	}
 }
 
-func (r *Router) RegisterGRPCServer(engine *grpc.Server, srv *service.{{serverNameFunc .Server}}Service) {
+func (r *Handles) RegisterGRPCServer(engine *grpc.Server, srv *service.{{serverNameFunc .Server}}) {
 	{{.Server}}.Register{{serverNameFunc .Server}}Server(engine, srv)
 	grpc_health_v1.RegisterHealthServer(engine, srv)
 }
