--- a/cmd/gen/client/tmpl/server/main.tmpl
+++ b/cmd/gen/client/tmpl/server/main.tmpl
@@ -6,7 +6,7 @@ import (
 	"github.com/gin-gonic/gin"
 	"{{.Page}}/{{.Server}}/internal/domain"
 	"{{.Page}}/{{.Server}}/internal/repository"
-	"{{.Page}}/{{.Server}}/internal/router"
+	"{{.Page}}/{{.Server}}/internal/handles"
 	"{{.Page}}/{{.Server}}/internal/service"
 	"{{.Protoc}}"
 	"github.com/long250038728/web/tool/app"
@@ -35,7 +35,7 @@ func Run(serverName string) error {
 		service.Set{{serverNameFunc .Server}}Domain(domain.New{{serverNameFunc .Server}}Domain(repository.New{{serverNameFunc .Server}}Repository(util))),
 	)
 
-	r := router.NewRouter(util)
+	r := handles.NewHandles(util)
 
 	opts := []app.Option{
 		app.Servers( // 服务
