--- a/cmd/gen/client/tmpl/server/service.tmpl
+++ b/cmd/gen/client/tmpl/server/service.tmpl
@@ -6,22 +6,22 @@ import (
 	"github.com/long250038728/web/tool/server/rpc/tool"
 )
 
-type {{serverNameFunc .Server}}Service struct {
+type {{serverNameFunc .Server}} struct {
 	{{.Server}}.Unimplemented{{serverNameFunc .Server}}Server
 	tool.GrpcHealth
-	domain *domain.{{serverNameFunc .Server}}Domain
+	domain *domain.{{serverNameFunc .Server}}
 }
 
-type {{serverNameFunc .Server}}ServerOpt func(s *{{serverNameFunc .Server}}Service)
+type {{serverNameFunc .Server}}ServerOpt func(s *{{serverNameFunc .Server}})
 
-func Set{{serverNameFunc .Server}}Domain(domain *domain.{{serverNameFunc .Server}}Domain) {{serverNameFunc .Server}}ServerOpt {
-	return func(s *{{serverNameFunc .Server}}Service) {
+func Set{{serverNameFunc .Server}}Domain(domain *domain.{{serverNameFunc .Server}}) {{serverNameFunc .Server}}ServerOpt {
+	return func(s *{{serverNameFunc .Server}}) {
 		s.domain = domain
 	}
 }
 
-func New{{serverNameFunc .Server}}Service(opts ...{{serverNameFunc .Server}}ServerOpt) *{{serverNameFunc .Server}}Service {
-	s := &{{serverNameFunc .Server}}Service{}
+func New{{serverNameFunc .Server}}Service(opts ...{{serverNameFunc .Server}}ServerOpt) *{{serverNameFunc .Server}} {
+	s := &{{serverNameFunc .Server}}{}
 	for _, opt := range opts {
 		opt(s)
 	}
