--- a/tool/gen/tmpl/enum.tmpl
+++ b/tool/gen/tmpl/enum.tmpl
@@ -3,25 +3,28 @@ package gen
 {{- range  $index,$item := .List}}
 // {{fieldName $item.Key}} {{$item.Comment}}
 var (
-    {{fieldName $item.Key}} = map[int32] string{
-    	{{range  $enumIndex,$enumItem := $item.Items}}
-            {{- fieldName $item.Key}}{{fieldName $enumItem.Key}} : "{{$enumItem.Comment}}",
-        {{end}}
-    }
-    {{fieldName $item.Key}}List = []map[string]any{
-        {{ range  $enumIndex,$enumItem := $item.Items}}
-            {{- ""}}{"id": {{fieldName $item.Key}}{{fieldName $enumItem.Key}}, "name": "{{$enumItem.Comment}}"},
-        {{end}}
-    }
 	{{range  $enumIndex,$enumItem := $item.Items}}
         {{- fieldName $item.Key}}{{fieldName $enumItem.Key}} int32 = {{$enumItem.Value}} //{{$enumItem.Comment}}
     {{end}}
 )
 
-func {{fieldName $item.Key}}Str(enum int32) string {
-	if typ,ok := {{fieldName $item.Key}}[enum] ;ok {
+func {{fieldName $item.Key}}(enum int32) string {
+    data := map[int32] string{
+    	{{range  $enumIndex,$enumItem := $item.Items}}
+            {{- fieldName $item.Key}}{{fieldName $enumItem.Key}} : "{{$enumItem.Comment}}",
+        {{end}}
+    }
+	if typ,ok := data[enum] ;ok {
     	return typ
     }
     return ""
+}
+
+func {{fieldName $item.Key}}List() []map[string]any {
+   return []map[string]any{
+        {{ range  $enumIndex,$enumItem := $item.Items}}
+            {{- ""}}{"id": {{fieldName $item.Key}}{{fieldName $enumItem.Key}}, "name": "{{$enumItem.Comment}}"},
+        {{end}}
+    }
 }
 {{end}}
