--- a/cmd/gen/client/tmpl/server/server.tmpl
+++ b/cmd/gen/client/tmpl/server/server.tmpl
@@ -3,8 +3,8 @@ package server
 import (
 	"fmt"
 	"github.com/gin-gonic/gin"
-	"{{.Page}}/{{.Server}}/internal/biz/{{.Domain}}/domain"
-	"{{.Page}}/{{.Server}}/internal/biz/{{.Domain}}/repository"
+	{{.Domain}}Domain "{{.Page}}/{{.Server}}/internal/biz/{{.Domain}}/domain"
+	{{.Domain}}Repository "{{.Page}}/{{.Server}}/internal/biz/{{.Domain}}/repository"
 	"{{.Page}}/{{.Server}}/internal/handles"
 	"{{.Page}}/{{.Server}}/internal/service"
 	"github.com/long250038728/web/tool/app"
@@ -21,7 +21,7 @@ func Run(serverName string) error {
 
 	// 定义服务
 	svc := service.New{{serverNameFunc .Server}}Service(
-		service.Set{{serverNameFunc .Domain}}Domain(domain.New{{serverNameFunc .Domain}}Domain(repository.New{{serverNameFunc .Domain}}Repository(util))),
+		service.Set{{serverNameFunc .Domain}}Domain({{.Domain}}Domain.New{{serverNameFunc .Domain}}Domain({{.Domain}}Repository.New{{serverNameFunc .Domain}}Repository(util))),
 	)
 
 	handle := handles.NewHandles(util)
